added verisign floating seal

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,13 @@
     -->
     <title>Mark McPherson's Portfolio</title>
   </head>
+
+  <script
+    type="text/javascript"
+    src="https://cdn.ywxi.net/js/1.js"
+    async
+  ></script>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
